--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,7 @@ cache/
 out/
 
 # Ignores development broadcast logs
-!/broadcast
-/broadcast/*/31337/
-/broadcast/*/0/
-/broadcast/**/dry-run/
+broadcast/
 
 # Docs
 docs/
